<resources>
    <string name="app_name">FE-215CS02003252</string>
    <string name="developer_name">Miracle Anyanwu</string>

    <!-- Details -->
    <string name="details">Details</string>
    <string name="name">Your name</string>
    <string name="address">Your address</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

    <!-- Services -->
    <string name="services">Services</string>
    <string name="days">Days spent</string>
    <string name="medication">Medication charges</string>
    <string name="surgical">Surgical charges</string>
    <string name="lab">Lab fees</string>
    <string name="rehab">Rehabilitation charges</string>

    <!-- Summary -->
    <string name="summary">Summary</string>
    <string name="view_report">View Report</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear</string>
    <string name="send">Send</string>

    <string name="invoice_address">Valley View University</string>
    <string name="total_charge">Total Charges</string>
    <string name="misc_charge">Misc Charges</string>
    <string name="stay_charge">Stay Charges</string>
</resources>
