<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical">

<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nested_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:visibility="visible">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:contentInsetStartWithNavigation="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/spacing_smlarge"
                android:paddingLeft="@dimen/spacing_smlarge"
                android:paddingRight="@dimen/spacing_smlarge"
                android:paddingTop="@dimen/spacing_medium">

                <TextView
                    android:id="@+id/totalCharge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="$ 2026.24"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
                    android:textColor="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TOTAL PRICE"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/white" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_middle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_invoice_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="INV-ZT45C"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@android:color/white"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="TRANSACTION Code"
                            android:textAppearance="@style/TextAppearance.AppCompat.Small"
                            android:textColor="@android:color/white" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


                <View
                    android:layout_width="@dimen/spacing_smlarge"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_insert_drive_file_black_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_40" />

                <View
                    android:layout_width="@dimen/spacing_smlarge"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/bt_toggle_items"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/L"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_smlarge"
                    android:layout_marginLeft="?attr/actionBarSize"
                    android:layout_marginRight="@dimen/spacing_smlarge"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_mxlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Web Design"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 455.62"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_smlarge"
                    android:layout_marginLeft="?attr/actionBarSize"
                    android:layout_marginRight="@dimen/spacing_smlarge"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_mxlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="E-Book Design"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 278.12"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_smlarge"
                    android:layout_marginLeft="?attr/actionBarSize"
                    android:layout_marginRight="@dimen/spacing_smlarge"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_mxlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Hosting Plan"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 719.00"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_smlarge"
                    android:layout_marginLeft="?attr/actionBarSize"
                    android:layout_marginRight="@dimen/spacing_smlarge"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_mxlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Brochure Design"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 573.50"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/spacing_smlarge"
                    android:layout_marginLeft="?attr/actionBarSize"
                    android:layout_marginRight="@dimen/spacing_smlarge"
                    android:layout_marginStart="?attr/actionBarSize"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/spacing_xlarge"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Total"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="$ 2026.24"
                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:minHeight="?attr/actionBarSize"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_insert_drive_file_black_24dp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/services"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_40" />

                <View
                    android:layout_width="@dimen/spacing_large"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@+id/bt_toggle_description"
                    android:layout_width="?attr/actionBarSize"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:tint="@color/grey_40"
                    app:srcCompat="@drawable/ic_arrow_drop_down_black_24dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_expand_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_smlarge"
                android:layout_marginLeft="?attr/actionBarSize"
                android:layout_marginRight="@dimen/spacing_smlarge"
                android:layout_marginStart="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_large"
                android:paddingTop="@dimen/spacing_medium"
                android:visibility="gone">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Rand text"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_10" />



            <LinearLayout
                android:id="@+id/lyt_expand_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_middle"
                android:layout_marginEnd="@dimen/spacing_smlarge"
                android:layout_marginLeft="?attr/actionBarSize"
                android:layout_marginRight="@dimen/spacing_smlarge"
                android:layout_marginStart="?attr/actionBarSize"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/spacing_medium"
                android:paddingTop="@dimen/spacing_medium"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/invoice_address"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            </LinearLayout>


        </LinearLayout>


</android.support.v4.widget.NestedScrollView>

<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="bottom">

<android.support.v7.widget.AppCompatButton
    android:id="@+id/btnSend"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    android:text="@string/send"
    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
    android:textColor="@android:color/white" />

</LinearLayout>

    </RelativeLayout>